feat: implement task management views and related components
- Add kanban and table views for task management
- Create reusable components for task cards, tables, and kanban columns
- Update database schema and queries to support task status and positions
- Add drag-and-drop functionality for kanban board
- Implement data table with sorting, filtering, and pagination
- Add new dependencies for table and drag-and-drop functionality

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^5.2.2",
     "@kinde-oss/kinde-auth-nextjs": "^2.9.1",
     "@prisma/client": "^6.16.1",
@@ -27,6 +28,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
